# NeuroSlice

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  citation.html  commands.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: docs.yaml  pylint.yml  python-publish.yml
_modules/: index.html
_modules/neuroslice/: core.html
_sources/: citation.rst.txt  index.rst.txt
_sources/usage_guide/: index.rst.txt  python.rst.txt
docs/: requirements.txt
docs/source/: api.rst  citation.rst  commands.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: custom.css
docs/source/installation/: installation_guide.rst  troubleshooting.rst
docs/source/usage_guide/: cli.rst  index.rst  python.rst
examples/: inference.ipynb
installation/: installation_guide.html  troubleshooting.html
neuroslice/: __init__.py  cli.py  core.py  utils.py
usage_guide/: cli.html  index.html  python.html
