[project]
name = "neuroslice"
version = "0.2.1"
description = "Slice-wise brain tumor detection and 3D mask reconstruction from MRI"
authors = [
    { name = "Alice Matoso", email = "alice@example.com" },
    { name = "Bob Silva", email = "bob@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch",
    "nibabel",
    "numpy",
    "ultralytics",
    "tqdm",
    "opencv-python", 
    "huggingface-hub"
]

[project.scripts]
neuroslice = "neuroslice.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neuroslice"]